fix margin on mobile

--- a/css/app.scss
+++ b/css/app.scss
@@ -469,7 +469,8 @@ footer h4 {
 }
 
 footer h4 {
-  margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
